Optimized Code Structure 1.2

--- a/synkro-panel-beta/synkro-panel-beta/platformio.ini
+++ b/synkro-panel-beta/synkro-panel-beta/platformio.ini
@@ -16,7 +16,6 @@ monitor_speed = 115200
 lib_deps = 
 	knolleary/PubSubClient @ ^2.8
 	bblanchon/ArduinoJson @ ^7.0.0
-	; tzapu/WiFiManager@^2.0.17
     me-no-dev/AsyncTCP
-    me-no-dev/ESPAsyncWebServer
-    ; arduino-libraries/WiFi
+    ottowinter/ESPAsyncWebServer-esphome @ ^3.1.0
+    ; me-no-dev/ESPAsyncWebServer
